# code-sonar

./: .env  AGENTS.md  README.md  code-sonar.code-workspace  gemini-extension.json  install.sh
atls/: README.md  atls  atls.py  install.sh  pyproject.toml
atls/docs/design/: ATLS_BULK_WORKLOG_PRD.md  ATLS_DAILY_TRIAGE_DESIGN.md  ATLS_DASHBOARD_INTEGRATION_PLAN.md  ATLS_DASHBOARD_INTEGRATION_PROMPT.md  ATLS_DASHBOARD_PRD.md  ATLS_E2E_HARNESS_WORKFLOW.md  ATLS_ENVIRONMENT_SETTINGS_PRD.md  ATLS_GENERIC_CLI_DESIGN.md  ATLS_ISSUE_E2E_PLAYBOOK.md  ATLS_NEW_FRONTEND_INTEGRATION_PLAN.md  ATLS_NEW_FRONTEND_INTEGRATION_PROMPT.md  ATLS_PLATFORM_FEATURE_AUDIT.md  ATLS_PLATFORM_MASTER_PRD.md  ATLS_PROJECT_REGISTRY_PRD.md  ATLS_SOURCE_CONNECTOR_MASTER_PRD.md  ATLS_WORKFLOW_BUILDER_PRD.md  ATLS_WORKFLOW_POLICY.md  ATLS_WORKFLOW_WORKLOG_CLOUD_PRD.md
atls/docs/guides/: MCP_vs_Scripts_Guide.md  TEAM_DISTRIBUTION.md  USER_GUIDE.md
atls/docs/pdlc/: ATLS_PDLC_ISSUE_COLLECTION_PROCESS.md  pdlc_tools_all_children.md
atls/docs/reference/: ACCEPTANCE_MANIFEST_SPEC.md  ATLS_DASHBOARD_READ_API_CONTRACT.md  ATLS_REQUIREMENT_COMPLETENESS_CHECKLIST.md  ATLS_SOURCE_DOCUMENT_INPUT.md  ISSUE_REQUIREMENT_MANIFEST_SPEC.md  NETWORK_STATE_ASSERTION_TEMPLATE.md  PASS_FAIL_EVIDENCE_REPORT_SPEC.md  PROJECT_ADAPTER_SPEC.md  acceptance-manifest.example.json  acceptance-manifest.gemini-1803.example.json  acceptance-manifest.gemini-1803.example.md  context-notes.md  issue-requirement-manifest.gemini-1803.example.json  issue-requirement-manifest.gemini-1803.example.md  (+1 more)
atls/scripts/: build_dist.sh
(+99 files in other folders)
